practice section added and made responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Solution</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-    
+    <main class="max-w-6xl mx-auto mt-28">
+        <section class="text-center ">
+            <div class="flex flex-col items-center">
+                <h2 class="text-4xl mb-2">The Legal Practice Area</h2>
+                <p class="text-gray-400 max-w-2xl ">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour.</p>
+            </div>
+
+            <!-- card container -->
+
+            <div class="grid max-w-full grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 mt-16">
+                <!-- card 1 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-400">
+                    <img class="" src="./images/business.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Business Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <!-- card 2 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                    <img class="" src="./images/criminal.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Criminal Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <!-- card 3 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                    <img class="" src="./images/child.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Child Support</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <!-- card 4 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                    <img class="" src="./images/education.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Education Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <!-- card 5 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center border-gray-300">
+                    <img class="" src="./images/divorce.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Divorce Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+                <!-- card 6 -->
+                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                    <img class="" src="./images/tax.png" alt="">
+                    <div class="w-3xs h-48 mt-3 text-center">
+                        <h3 class="text-3xl pb-3">Tax Law</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered
+                            alteration in some form, by injected humour.</p>
+                    </div>
+                    <img src="./images/Frame.png" alt="">
+                </div>
+
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
