edit reponsivenes of card

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
             <!-- card container -->
 
-            <div class="grid max-w-full grid-cols-1 gap-3 sm:grid-cols-2 md:grid-cols-3 mt-16">
+            <div class="grid max-w-full grid-cols-1 gap-3 sm:grid-cols-2 justify-items-center md:grid-cols-3 lg:justify-items-normal  mt-16">
                 <!-- card 1 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-400">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center  border-gray-400">
                     <img class="" src="./images/business.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Business Law</h3>
@@ -32,7 +32,7 @@
                     <img src="./images/Frame.png" alt="">
                 </div>
                 <!-- card 2 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center  border-gray-300">
                     <img class="" src="./images/criminal.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Criminal Law</h3>
@@ -43,7 +43,7 @@
                     <img src="./images/Frame.png" alt="">
                 </div>
                 <!-- card 3 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center  border-gray-300">
                     <img class="" src="./images/child.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Child Support</h3>
@@ -54,7 +54,7 @@
                     <img src="./images/Frame.png" alt="">
                 </div>
                 <!-- card 4 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center  border-gray-300">
                     <img class="" src="./images/education.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Education Law</h3>
@@ -65,7 +65,7 @@
                     <img src="./images/Frame.png" alt="">
                 </div>
                 <!-- card 5 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center border-gray-300">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center border-gray-300">
                     <img class="" src="./images/divorce.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Divorce Law</h3>
@@ -76,7 +76,7 @@
                     <img src="./images/Frame.png" alt="">
                 </div>
                 <!-- card 6 -->
-                <div class="max-w-96 max-h-96 border flex flex-col  items-center justify-center  border-gray-300">
+                <div class="max-w-96 h-96 border flex flex-col  items-center justify-center  border-gray-300">
                     <img class="" src="./images/tax.png" alt="">
                     <div class="w-3xs h-48 mt-3 text-center">
                         <h3 class="text-3xl pb-3">Tax Law</h3>
